--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@
                 </div>
             </div>
         </section>
-        <section class="ms-section ms-section-grey">
+        <section class="ms-section ms-section-grey ms-section-swiper">
             <div class="ms-container">
                 <div class="ms-head">
                     <h2 class="ms-title"><strong>חדשות</strong> ואירועים</h2>
@@ -644,7 +644,7 @@
                 </div>
             </div>
         </section>
-        <section class="ms-section">
+        <section class="ms-section ms-section-swiper">
             <div class="ms-container">
                 <div class="ms-head">
                     <h2 class="ms-title"><strong>כדאי </strong>לדעת</h2>
@@ -656,6 +656,42 @@
                 </div>
                 <div class="swiper-main-video ms-swiper">
                     <div class="swiper-wrapper">
+                        <div class="swiper-slide ms-video-card">
+                            <div class="ms-video-card-img-container">
+                                <div class="ms-video-card-play-container">
+                                    <svg class="ms-video-card-play" width="21" height="22" viewBox="0 0 21 22"
+                                        fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path
+                                            d="M0.499878 6.54999C0.499878 1.02499 4.41238 -1.23751 9.19988 1.52499L13.0624 3.74999L16.9249 5.97499C21.7124 8.73749 21.7124 13.2625 16.9249 16.025L13.0624 18.25L9.19988 20.475C4.41238 23.2375 0.499878 20.975 0.499878 15.45V11V6.54999Z"
+                                            fill="#FDB933" />
+                                    </svg>
+                                </div>
+                                <img src="./img/233873a877fd92f484f521528c857da7c8149797.jpg" alt="new"
+                                    class="ms-video-card-img">
+                            </div>
+                            <div class="ms-video-card-head">
+                                <h3 class="ms-video-card-title">כנס רפואי שנתי</h3>
+                                <span class="ms-video-card-date">21.04.2025</span>
+                            </div>
+                        </div>
+                        <div class="swiper-slide ms-video-card">
+                            <div class="ms-video-card-img-container">
+                                <div class="ms-video-card-play-container">
+                                    <svg class="ms-video-card-play" width="21" height="22" viewBox="0 0 21 22"
+                                        fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path
+                                            d="M0.499878 6.54999C0.499878 1.02499 4.41238 -1.23751 9.19988 1.52499L13.0624 3.74999L16.9249 5.97499C21.7124 8.73749 21.7124 13.2625 16.9249 16.025L13.0624 18.25L9.19988 20.475C4.41238 23.2375 0.499878 20.975 0.499878 15.45V11V6.54999Z"
+                                            fill="#FDB933" />
+                                    </svg>
+                                </div>
+                                <img src="./img/233873a877fd92f484f521528c857da7c8149797.jpg" alt="new"
+                                    class="ms-video-card-img">
+                            </div>
+                            <div class="ms-video-card-head">
+                                <h3 class="ms-video-card-title">כנס רפואי שנתי</h3>
+                                <span class="ms-video-card-date">21.04.2025</span>
+                            </div>
+                        </div>
                         <div class="swiper-slide ms-video-card">
                             <div class="ms-video-card-img-container">
                                 <div class="ms-video-card-play-container">
@@ -764,7 +800,7 @@
                 </div>
             </div>
         </section>
-        <section class="ms-section ms-blue-section">
+        <section class="ms-section ms-blue-section ms-section-swiper">
             <div class="ms-container">
                 <div class="ms-head">
                     <h2 class="ms-title">מאמרים</h2>
@@ -776,6 +812,69 @@
                 </div>
                 <div class="swiper-main-articles ms-swiper">
                     <div class="swiper-wrapper">
+                        <div class="swiper-slide ms-news-card">
+                            <img src="./img/916fa9522d32c27444859facb56bf23a6fe78604.jpg" alt="new"
+                                class="ms-news-card-img">
+                            <div class="ms-news-card-head">
+                                <h3 class="ms-news-card-title">גיוס צוות חדש</h3>
+                                <span class="ms-news-card-date">21.04.2025</span>
+                            </div>
+                            <a class="ms-news-card-link" href="#">
+                                לפרטים
+                                <svg width="24" height="25" viewBox="0 0 24 25" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <g opacity="0.5">
+                                        <path d="M9.57031 6.42969L3.50031 12.4997L9.57031 18.5697" stroke="#175FB0"
+                                            stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                                        <path d="M20.5 12.5H3.67" stroke="#175FB0" stroke-width="1.5"
+                                            stroke-linecap="round" stroke-linejoin="round" />
+                                    </g>
+                                </svg>
+
+                            </a>
+                        </div>
+                        <div class="swiper-slide ms-news-card">
+                            <img src="./img/916fa9522d32c27444859facb56bf23a6fe78604.jpg" alt="new"
+                                class="ms-news-card-img">
+                            <div class="ms-news-card-head">
+                                <h3 class="ms-news-card-title">גיוס צוות חדש</h3>
+                                <span class="ms-news-card-date">21.04.2025</span>
+                            </div>
+                            <a class="ms-news-card-link" href="#">
+                                לפרטים
+                                <svg width="24" height="25" viewBox="0 0 24 25" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <g opacity="0.5">
+                                        <path d="M9.57031 6.42969L3.50031 12.4997L9.57031 18.5697" stroke="#175FB0"
+                                            stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                                        <path d="M20.5 12.5H3.67" stroke="#175FB0" stroke-width="1.5"
+                                            stroke-linecap="round" stroke-linejoin="round" />
+                                    </g>
+                                </svg>
+
+                            </a>
+                        </div>
+                        <div class="swiper-slide ms-news-card">
+                            <img src="./img/916fa9522d32c27444859facb56bf23a6fe78604.jpg" alt="new"
+                                class="ms-news-card-img">
+                            <div class="ms-news-card-head">
+                                <h3 class="ms-news-card-title">גיוס צוות חדש</h3>
+                                <span class="ms-news-card-date">21.04.2025</span>
+                            </div>
+                            <a class="ms-news-card-link" href="#">
+                                לפרטים
+                                <svg width="24" height="25" viewBox="0 0 24 25" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <g opacity="0.5">
+                                        <path d="M9.57031 6.42969L3.50031 12.4997L9.57031 18.5697" stroke="#175FB0"
+                                            stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                                        <path d="M20.5 12.5H3.67" stroke="#175FB0" stroke-width="1.5"
+                                            stroke-linecap="round" stroke-linejoin="round" />
+                                    </g>
+                                </svg>
+
+                            </a>
+                        </div>
                         <div class="swiper-slide ms-news-card">
                             <img src="./img/916fa9522d32c27444859facb56bf23a6fe78604.jpg" alt="new"
                                 class="ms-news-card-img">
