--- a/index.html
+++ b/index.html
@@ -101,7 +101,10 @@
             </menu>
         </aside>
         <section class="ms-section ms-home-preview">
-            <video autoplay muted loop class="home-preview__video" poster="./img/preview-video-poster.jpg">
+            <video muted loop class="home-preview__video active" poster="./img/preview-video-poster.jpg">
+                <source src="./video/preview-video.mp4" type="video/mp4">
+            </video>
+            <video muted loop class="home-preview__video" poster="./img/preview-video-poster.jpg">
                 <source src="./video/preview-video.mp4" type="video/mp4">
             </video>
             <svg class="ms-home-preview__border" width="100%" height="auto" viewBox="0 0 1440 82" fill="none"
@@ -624,6 +627,7 @@
                                     </g>
                                 </svg>
 
+
                             </a>
                         </div>
                     </div>
@@ -824,12 +828,13 @@
                                 <svg width="24" height="25" viewBox="0 0 24 25" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <g opacity="0.5">
-                                        <path d="M9.57031 6.42969L3.50031 12.4997L9.57031 18.5697" stroke="#175FB0"
+                                        <path d="M9.57031 6.42969L3.50031 12.4997L9.57031 18.5697" stroke="#E5E7EB"
                                             stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-                                        <path d="M20.5 12.5H3.67" stroke="#175FB0" stroke-width="1.5"
+                                        <path d="M20.5 12.5H3.67" stroke="#E5E7EB" stroke-width="1.5"
                                             stroke-linecap="round" stroke-linejoin="round" />
                                     </g>
                                 </svg>
+
 
                             </a>
                         </div>
@@ -845,12 +850,13 @@
                                 <svg width="24" height="25" viewBox="0 0 24 25" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <g opacity="0.5">
-                                        <path d="M9.57031 6.42969L3.50031 12.4997L9.57031 18.5697" stroke="#175FB0"
+                                        <path d="M9.57031 6.42969L3.50031 12.4997L9.57031 18.5697" stroke="#E5E7EB"
                                             stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-                                        <path d="M20.5 12.5H3.67" stroke="#175FB0" stroke-width="1.5"
+                                        <path d="M20.5 12.5H3.67" stroke="#E5E7EB" stroke-width="1.5"
                                             stroke-linecap="round" stroke-linejoin="round" />
                                     </g>
                                 </svg>
+
 
                             </a>
                         </div>
@@ -866,12 +872,13 @@
                                 <svg width="24" height="25" viewBox="0 0 24 25" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <g opacity="0.5">
-                                        <path d="M9.57031 6.42969L3.50031 12.4997L9.57031 18.5697" stroke="#175FB0"
+                                        <path d="M9.57031 6.42969L3.50031 12.4997L9.57031 18.5697" stroke="#E5E7EB"
                                             stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-                                        <path d="M20.5 12.5H3.67" stroke="#175FB0" stroke-width="1.5"
+                                        <path d="M20.5 12.5H3.67" stroke="#E5E7EB" stroke-width="1.5"
                                             stroke-linecap="round" stroke-linejoin="round" />
                                     </g>
                                 </svg>
+
 
                             </a>
                         </div>
@@ -887,12 +894,13 @@
                                 <svg width="24" height="25" viewBox="0 0 24 25" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <g opacity="0.5">
-                                        <path d="M9.57031 6.42969L3.50031 12.4997L9.57031 18.5697" stroke="#175FB0"
+                                        <path d="M9.57031 6.42969L3.50031 12.4997L9.57031 18.5697" stroke="#E5E7EB"
                                             stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-                                        <path d="M20.5 12.5H3.67" stroke="#175FB0" stroke-width="1.5"
+                                        <path d="M20.5 12.5H3.67" stroke="#E5E7EB" stroke-width="1.5"
                                             stroke-linecap="round" stroke-linejoin="round" />
                                     </g>
                                 </svg>
+
 
                             </a>
                         </div>
@@ -908,12 +916,13 @@
                                 <svg width="24" height="25" viewBox="0 0 24 25" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <g opacity="0.5">
-                                        <path d="M9.57031 6.42969L3.50031 12.4997L9.57031 18.5697" stroke="#175FB0"
+                                        <path d="M9.57031 6.42969L3.50031 12.4997L9.57031 18.5697" stroke="#E5E7EB"
                                             stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-                                        <path d="M20.5 12.5H3.67" stroke="#175FB0" stroke-width="1.5"
+                                        <path d="M20.5 12.5H3.67" stroke="#E5E7EB" stroke-width="1.5"
                                             stroke-linecap="round" stroke-linejoin="round" />
                                     </g>
                                 </svg>
+
 
                             </a>
                         </div>
@@ -929,12 +938,13 @@
                                 <svg width="24" height="25" viewBox="0 0 24 25" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <g opacity="0.5">
-                                        <path d="M9.57031 6.42969L3.50031 12.4997L9.57031 18.5697" stroke="#175FB0"
+                                        <path d="M9.57031 6.42969L3.50031 12.4997L9.57031 18.5697" stroke="#E5E7EB"
                                             stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-                                        <path d="M20.5 12.5H3.67" stroke="#175FB0" stroke-width="1.5"
+                                        <path d="M20.5 12.5H3.67" stroke="#E5E7EB" stroke-width="1.5"
                                             stroke-linecap="round" stroke-linejoin="round" />
                                     </g>
                                 </svg>
+
 
                             </a>
                         </div>
@@ -950,9 +960,9 @@
                                 <svg width="24" height="25" viewBox="0 0 24 25" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <g opacity="0.5">
-                                        <path d="M9.57031 6.42969L3.50031 12.4997L9.57031 18.5697" stroke="#175FB0"
+                                        <path d="M9.57031 6.42969L3.50031 12.4997L9.57031 18.5697" stroke="#E5E7EB"
                                             stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-                                        <path d="M20.5 12.5H3.67" stroke="#175FB0" stroke-width="1.5"
+                                        <path d="M20.5 12.5H3.67" stroke="#E5E7EB" stroke-width="1.5"
                                             stroke-linecap="round" stroke-linejoin="round" />
                                     </g>
                                 </svg>
