--- a/index.html
+++ b/index.html
@@ -660,7 +660,7 @@
                 </div>
                 <div class="swiper-main-video ms-swiper">
                     <div class="swiper-wrapper">
-                        <div class="swiper-slide ms-video-card">
+                        <div data-link="https://www.youtube.com/watch?v=1Bpj38bxJ60" class="swiper-slide ms-video-card">
                             <div class="ms-video-card-img-container">
                                 <div class="ms-video-card-play-container">
                                     <svg class="ms-video-card-play" width="21" height="22" viewBox="0 0 21 22"
@@ -678,7 +678,7 @@
                                 <span class="ms-video-card-date">21.04.2025</span>
                             </div>
                         </div>
-                        <div class="swiper-slide ms-video-card">
+                        <div data-link="https://www.youtube.com/watch?v=1Bpj38bxJ60" class="swiper-slide ms-video-card">
                             <div class="ms-video-card-img-container">
                                 <div class="ms-video-card-play-container">
                                     <svg class="ms-video-card-play" width="21" height="22" viewBox="0 0 21 22"
@@ -696,7 +696,7 @@
                                 <span class="ms-video-card-date">21.04.2025</span>
                             </div>
                         </div>
-                        <div class="swiper-slide ms-video-card">
+                        <div data-link="https://www.youtube.com/watch?v=1Bpj38bxJ60" class="swiper-slide ms-video-card">
                             <div class="ms-video-card-img-container">
                                 <div class="ms-video-card-play-container">
                                     <svg class="ms-video-card-play" width="21" height="22" viewBox="0 0 21 22"
@@ -714,7 +714,7 @@
                                 <span class="ms-video-card-date">21.04.2025</span>
                             </div>
                         </div>
-                        <div class="swiper-slide ms-video-card">
+                        <div data-link="https://www.youtube.com/watch?v=1Bpj38bxJ60" class="swiper-slide ms-video-card">
                             <div class="ms-video-card-img-container">
                                 <div class="ms-video-card-play-container">
                                     <svg class="ms-video-card-play" width="21" height="22" viewBox="0 0 21 22"
@@ -732,7 +732,7 @@
                                 <span class="ms-video-card-date">21.04.2025</span>
                             </div>
                         </div>
-                        <div class="swiper-slide ms-video-card">
+                        <div data-link="https://www.youtube.com/watch?v=1Bpj38bxJ60" class="swiper-slide ms-video-card">
                             <div class="ms-video-card-img-container">
                                 <div class="ms-video-card-play-container">
                                     <svg class="ms-video-card-play" width="21" height="22" viewBox="0 0 21 22"
@@ -750,7 +750,7 @@
                                 <span class="ms-video-card-date">21.04.2025</span>
                             </div>
                         </div>
-                        <div class="swiper-slide ms-video-card">
+                        <div data-link="https://www.youtube.com/watch?v=1Bpj38bxJ60" class="swiper-slide ms-video-card">
                             <div class="ms-video-card-img-container">
                                 <div class="ms-video-card-play-container">
                                     <svg class="ms-video-card-play" width="21" height="22" viewBox="0 0 21 22"
@@ -768,7 +768,7 @@
                                 <span class="ms-video-card-date">21.04.2025</span>
                             </div>
                         </div>
-                        <div class="swiper-slide ms-video-card">
+                        <div data-link="https://www.youtube.com/watch?v=1Bpj38bxJ60" class="swiper-slide ms-video-card">
                             <div class="ms-video-card-img-container">
                                 <div class="ms-video-card-play-container">
                                     <svg class="ms-video-card-play" width="21" height="22" viewBox="0 0 21 22"
@@ -1127,7 +1127,6 @@
                         d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z" />
                 </svg>
             </button>
-            <iframe src="" frameborder="0"></iframe>
         </section>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
