--- a/index.html
+++ b/index.html
@@ -1129,6 +1129,17 @@
             </button>
         </section>
     </main>
+    <footer class="ms-footer ms-blue-section">
+        <div class="ms-footer-links">
+            <a href="#" class="ms-white-f-opacity-font ms-small-normal-bold-m">אבטחת מידע</a>
+            <a href="#" class="ms-white-f-opacity-font ms-small-normal-bold-m">כניסה למערכת מל”ם</a>
+            <a href="#" class="ms-white-f-opacity-font ms-small-normal-bold-m">תנאי שימוש</a>
+            <a href="#" class="ms-white-f-opacity-font ms-small-normal-bold-m">הצהרת נגישות</a>
+            <a href="#" class="ms-white-f-opacity-font ms-small-normal-bold-m">מפת אתר</a>
+            <a href="#" class="ms-white-f-opacity-font ms-small-normal-bold-m">חוק חופש המידע</a>
+        </div>
+        <span class="ms-white-f-opacity-font ms-small-normal-bold-m">המרכז הרפואי הלל יפה © 2025  כל הזכויות שמורות.</span>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="scripts/main.js"></script>
 </body>
