--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <video muted loop class="ms-home-preview-video" poster="./img/preview-video-poster.jpg">
                 <source src="./video/preview-video.mp4" type="video/mp4">
             </video>
-            <svg class="ms-home-preview-border" width="100%" height="auto" viewBox="0 0 1440 82" fill="none"
+            <svg class="ms-section-border" width="100%" height="auto" viewBox="0 0 1440 82" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
                 <path
                     d="M719 79.3365C180.701 78.764 -0.8464 16.1945 -2 0V81.7903H1440V0.817903C1440 15.8673 1257.3 79.9909 719 79.3365Z"
